<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.73" >

        <RelativeLayout
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_weight="0.23" >

            <ImageView
                android:id="@+id/signup_top"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true" android:background="@drawable/signup_black_top"/>

            <ImageView
                android:id="@+id/signup_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true" android:background="@drawable/signup_selector_back"/>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:text="@string/reg_new_account"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signup_top"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:inputType="phone" android:hint="@string/auth_phone_number">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText1"
                android:layout_alignRight="@+id/editText1"
                android:layout_below="@+id/editText1"
                android:ems="10"
                android:hint="@string/reg_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText2"
                android:layout_alignRight="@+id/editText2"
                android:layout_below="@+id/editText2"
                android:ems="10"
                android:inputType="textPersonName" android:hint="@string/reg_sername"/>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText3"
                android:layout_alignRight="@+id/editText3"
                android:layout_below="@+id/editText3"
                android:layout_marginTop="22dp"
                android:text="@string/auth_signup" android:background="@drawable/login_selector_button" android:textColor="@color/login_button"/>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>