<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
	  
	<LinearLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="328dp"
	    android:background="@drawable/light_background"
	    android:orientation="horizontal" >
		
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical" >

	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="88dp"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_marginTop="20dp"
	            android:src="@drawable/logo" />

	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="50dp"
	            android:layout_weight="0.07"
	            android:gravity="center"
	            android:orientation="vertical" >

	            <LinearLayout
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="18dp"
	                android:orientation="horizontal" >

	                <EditText
	                    android:id="@+id/editText1"
	                    android:layout_width="240dp"
	                    android:layout_height="wrap_content"
	                    android:background="@drawable/login_selector_inputr"
	                    android:hint="@string/reg_phone_number"/>

	                <ImageView
	                    android:id="@+id/imageView2"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:src="@drawable/login_phone" android:layout_marginTop="5dp"/>

	            </LinearLayout>
	        </LinearLayout>

	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="50dp"
	            android:layout_weight="0.05"
	            android:gravity="center"
	            android:orientation="vertical" >

	            <LinearLayout
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="18dp"
	                android:orientation="horizontal" >

	                <ImageView
	                    android:id="@+id/imageView3"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_marginTop="5dp"
	                    android:src="@drawable/login_pass" />

	                <EditText
	                    android:id="@+id/editText2"
	                    android:layout_width="240dp"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center"
	                    android:background="@drawable/login_selector_inputl"
	                    android:hint="@string/reg_password" 
	                    android:typeface="normal"
	                    android:password="true"/>

	            </LinearLayout>
	        </LinearLayout>

	        <Button
	            android:id="@+id/button1"
	            android:layout_width="225dp"
	            android:layout_height="60dp"
	            android:layout_gravity="center"
	            android:background="@drawable/login_selector_button"
	            android:text="@string/auth_login"
	            android:textColor="@color/login_button"/>

	        <RelativeLayout
	            android:layout_width="match_parent"
	            android:layout_height="106dp"
	            android:layout_marginTop="20dp"
	            android:layout_weight="1.48"
	            android:background="@drawable/login_signup"
	            android:orientation="vertical" 
	            android:clickable="true">

	            <TextView
	                android:id="@+id/textView1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentTop="true"
	                android:layout_centerHorizontal="true"
	                android:layout_marginTop="38dp"
	                android:gravity="center_vertical|center_horizontal"
	                android:text="@string/auth_signup"
	                android:textAppearance="?android:attr/textAppearanceLarge" />

	            <TextView
	                android:id="@+id/textView2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:layout_below="@+id/textView1"
	                android:gravity="center_vertical|center_horizontal"
	                android:text="@string/auth_welcome_info"
	                android:textAppearance="?android:attr/textAppearanceMedium" android:layout_margin="5dp" android:textIsSelectable="false" android:textAllCaps="false"/>

	        </RelativeLayout>

	    </LinearLayout>
	
	</LinearLayout>
</ScrollView>